Ukolovnik
=========

Simple task manager written in PHP and using MySQL as backend.


News
----

0.7 release (2007-??-??)

    * Development switched to subversion.
    * Added support for CSV export.

0.6 release (2007-01-06)

    * Detect concurrent editation.

0.5 release (2006-11-09)

    * Fix upgrade error.
    * Include Czech translation.

0.4 release (2006-10-31)

    * Modularized code.
    * Change of translation format.
    * Add installation script.
    * Move configuration to database.
    * Add configuration page.
    * Customizable add page.

0.3 release (2006-02-24)

    * Several bugfixes.
    * Configurable language and style.
    * Improved timestamp display.
    * Icons for some actions for more copact view.
    * Added some statistics.
    * Implemented category deleting.

0.2 release (2006-02-20)

    * Many bugfixes.
    * Retain new lines in text.
    * Automatically submit form on select change.
    * Compact filter display.

0.1 release (2006-01-14)

    * Inititial release.
    * Support for most MySQL versions used in wild.
    * Basic functionality added.

vim: expandtab sw=4 ts=4 sts=4: