@@ -11,6 +11,7 @@ News
 
     * Development switched to subversion.
     * Added support for CSV export.
+    * Added support for vCalendar export.
 
 0.6 release (2007-01-06)
 
